[package]
name = "pokebell"
description = "Pocket bell (Pager) 2 touch input mutual conversion library"
keywords = ["pokebell","pocketbell","pager"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/yoshd/pokebell"
documentation = "https://docs.rs/pokebell/"
categories = ["simulation"]
version = "0.1.0"
authors = ["yoshd <garlic.ba.0129@gmail.com>"]
edition = "2018"

[lib]
name = "pokebell"
crate-type = ["dylib", "staticlib"]

[dependencies]
libc = "0.2"
failure = "0.1.7"
lazy_static = "1.4"
